Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16341

unable to handle kernel NULL in qmt_site_recalc_cb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      BUG: unable to handle kernel NULL pointer dereference at 00000000000000f8
      ...
      RIP: 0010:qmt_site_recalc_cb+0x2ec/0x780 [lquota]
      ...
      [ffffa5564118fda0] cfs_hash_for_each_tight at ffffffffc0c72c81 [libcfs]
      [ffffa5564118fe08] qmt_pool_recalc at ffffffffc142dec7 [lquota]
      [ffffa5564118ff10] kthread at ffffffffb45043a6
      [ffffa5564118ff50] ret_from_fork at ffffffffb4e00255 

      The panic occurres due to an empty qit_lqes array after qmt_pool_lqes_lookup_spec. Sometimes it is possible if global lqe is not enforced.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: