lustre/tests/sanity-quota.sh
@@ -684,6 +684,9 @@ test_1a() {
 run_test 1a "Block hard limit (normal use and out of quota)"
 
 test_1b() {
+	(( MDS1_VERSION >= $(version_code 2.15.5) )) ||
+		skip "Need MDS version at least 2.15.5"
+
 	local limit=10 # MB
 	local global_limit=20 # MB
 	local testfile="$DIR/$tdir/$tfile-0"
@@ -2522,6 +2525,42 @@ test_13(){
 		error "spare quota isn't released, limit:$limit, space:$space"
 }
 run_test 13 "Cancel per-ID lock in the LRU list"
+
+test_14()
+{
+	(( MDS1_VERSION >= $(version_code 2.15.5) )) ||
+		skip "Need MDS version at least 2.15.5"
+
+	local qpool="qpool1"
+	local tfile1="$DIR/$tdir/$tfile-0"
+
+	mds_supports_qp
+	setup_quota_test || error "setup quota failed with $?"
+	# enable ost quota
+	set_ost_qtype $QTYPE || error "enable ost quota failed"
+
+	$LFS setquota -u $TSTUSR -b 0 -B 100M -i 0 -I 0 $DIR ||
+		error "set user quota failed"
+	pool_add $qpool || error "pool_add failed"
+	pool_add_targets $qpool 0 ||
+		error "pool_add_targets failed"
+	$LFS setstripe -p $qpool $DIR/$tdir || error "cannot set stripe"
+	$LFS setquota -u $TSTUSR -B 30M --pool $qpool $DIR ||
+		error "set user quota failed"
+
+	# don't care about returned value
+	$RUNAS $DD of=$tfile1 count=10 oflag=direct
+
+	echo "Stop ost1..."
+	stop ost1
+	$LFS setquota -u $TSTUSR -b 0 -B 0 -i 0 -I 0 $DIR ||
+		error "set user quota failed"
+
+	# no panic after removing OST0000 from the pool
+	pool_remove_target $qpool 0
+	start ost1 $(ostdevname 1) $OST_MOUNT_OPTS || error "start ost1 failed"
+}
+run_test 14 "check panic in qmt_site_recalc_cb"
 
 test_15(){
 	local LIMIT=$((24 * 1024 * 1024 * 1024 * 1024)) # 24 TB
